--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,6 +18,8 @@ uuid = { version = "0.8.1", features = ["v4", "serde"] }
 dotenv = "0.15.0"
 env_logger = "0.7.1"
 log = "0.4.8"
+regex = "1.3.7"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 diesel = { version = "1.4.4", features = ["sqlite", "mysql", "r2d2"] }
