--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 [dependencies]
 actix = "0.9.0"
 actix-rt = "1.1.0"
-actix-web = "2.0.0"
+actix-web = { version = "2.0.0", features = ["openssl"] }
 serde = "1.0.106"
 serde_derive = "1.0.106"
 serde_json = "1.0.51"
