--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,6 +20,7 @@ env_logger = "0.7.1"
 log = "0.4.8"
 regex = "1.3.7"
 lazy_static = "1.4.0"
+listenfd = "0.3.3"
 
 [dev-dependencies]
 diesel = { version = "1.4.4", features = ["sqlite", "mysql", "r2d2"] }
