--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,18 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "quotes": [
+        "error",
+        "single"
+      ],
+      "prettier/prettier": [
+        "error",
+        {
+          "singleQuote": true
+        }
+      ]
+    }
   },
   "browserslist": [
     "> 1%",
