--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -21,6 +21,7 @@ log = "0.4.8"
 regex = "1.3.7"
 lazy_static = "1.4.0"
 listenfd = "0.3.3"
+actix-cors = "0.2.0"
 
 [dev-dependencies]
 diesel = { version = "1.4.4", features = ["sqlite", "mysql", "r2d2"] }
