--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "yarn lint && vue-cli-service build",
-    "lint": "vue-cli-service lint --rule 'no-console: 'error''"
+    "build": "NODE_ENV=production yarn lint && vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
