ビルドが最小限で済むように

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,10 +1,10 @@
 # stage 1: build
 FROM rust:1.43 as builder
 WORKDIR /app
-COPY . .
 RUN apt install default-libmysqlclient-dev && \
     cargo install diesel_cli --no-default-features --features mysql && \
-    cargo install --path .
+COPY . .
+RUN cargo install --path .
 
 # stage 2: run
 FROM debian:buster-slim
